--- a/index.html
+++ b/index.html
@@ -125,11 +125,11 @@
                 </svg>
                                 </div>
                                 <div class="carousel">
-                                    <div class="carousel__item" style="background-image: url('img/slide_1.png')">
+                                    <div class="carousel__item" style="background-image: url('img/slide_1.jpg')">
                                     </div>
-                                    <div class="carousel__item" style="background-image: url('img/slide_2.png')">
+                                    <div class="carousel__item" style="background-image: url('img/slide_2.jpg')">
                                     </div>
-                                    <div class="carousel__item" style="background-image: url('img/slide_3.png')">
+                                    <div class="carousel__item" style="background-image: url('img/slide_3.jpg')">
                                     </div>
                                 </div>
             </div>
